src/components/PhotoModal.css
.modal-container {
    z-index: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    overflow-y: hidden !important;
    background-color: rgba(5, 4, 23, .8);
}

.modal-container .content {
    z-index: 9999;
    position: absolute;
    display: flex;
    flex-direction: column;
    top: 50px;
    background: white;
    color: black;
    width: 452px;
    min-width: 50%;
    height: 80%;
    border-radius: 10px; 
    line-height: 1.2rem;
}

.description {
  font-size: 1.3rem;
  font-weight: bold;
  margin-bottom: 1rem;
}

.user-profile {
  display: flex;
  align-items: center;
}

.user-profile a {
  text-decoration: none;
  color: inherit;
  text-align: left;
}

.user-profile .img-profile {
  margin: auto;
  float: left;
  border-radius: 50%;
  width: 48px !important;
}

.user-profile .name {
  margin-left: .5rem;
  float: left;
}

.user-profile .full-name {
  font-weight: bold;
  color: #000;
}

.user-profile .username {
  color: #2A2B8D;
}

.btn-download {
  text-decoration: none;
  color: rgba(42, 43, 141, .7);
  border: 2px solid rgba(42, 43, 141, .7);
  border-radius: 10px;
  padding: .5rem 1rem;
  font-weight: bold;
  line-height: 25px;
}

.btn-download:hover {
  color: rgba(42, 43, 141, 1);
  border-color: rgba(42, 43, 141, 1);
}

.row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
}

